# v2/services/api/internal/http/migration_contract.go
@@ -11,6 +11,7 @@ type MigrationHTTPApplication interface {
 	Create(ctx context.Context, accountID string, vaultID string, request cloverymigration.CreateRequest) (cloverymigration.Migration, error)
 	AddEntry(ctx context.Context, accountID string, vaultID string, migrationID string, entry cloverymigration.EntryInput) error
 	AddAsset(ctx context.Context, accountID string, vaultID string, migrationID string, request cloverymigration.AssetInput) (asset.UploadTicket, error)
+	Assets(ctx context.Context, accountID string, vaultID string, migrationID string) ([]cloverymigration.AssetMapping, error)
 	Verify(ctx context.Context, accountID string, vaultID string, migrationID string) (cloverymigration.Report, error)
 	Report(ctx context.Context, accountID string, vaultID string, migrationID string) (cloverymigration.Report, error)
 }
